--- a/tests/transcode/AndroidManifest.xml
+++ b/tests/transcode/AndroidManifest.xml
@@ -4,9 +4,12 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
 
     <application android:label="MediaProvider Transcode Tests">
-        <uses-library android:name="android.test.runner" />
+      <uses-library android:name="android.test.runner" />
+      <receiver android:name="com.android.cts.install.lib.LocalIntentSender"
+                android:exported="true" />
     </application>
 
     <instrumentation android:name="androidx.test.runner.AndroidJUnitRunner"
