--- a/tests/AndroidManifest.xml
+++ b/tests/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+    <uses-permission android:name="android.permission.UPDATE_APP_OPS_STATS" />
     <application android:label="MediaProvider Tests">
         <uses-library android:name="android.test.runner" />
 
