Grant statsd pull atom permission
This is to allow MediaProvider to be able to start using statsd pull
mechanism for sending the transcoding metrics to westworld.

BUG: 160260026, 178813586
Test: build
Change-Id: Iffc56fb7406f01780d0c00323c322a5af15ae504
Merged-In: Iffc56fb7406f01780d0c00323c322a5af15ae504
(cherry picked from commit 08ed49947e5fabc15ea6196d35d57f0a6687c599)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,9 @@
     <uses-permission android:name="android.permission.LOG_COMPAT_CHANGE"/>
     <uses-permission android:name="android.permission.READ_COMPAT_CHANGE_CONFIG"/>
 
+    <!-- Permissions required for statsd pull metrics -->
+    <uses-permission android:name="android.permission.REGISTER_STATS_PULL_ATOM"/>
+
     <application
             android:name="com.android.providers.media.MediaApplication"
             android:label="@string/app_label"
