Add the PACKAGE_USAGE_STATS permission
This allows the MediaProvider to know if an app requesting IO is in
the foreground and hence we can show a Snackbar when transcoding has
been throttled.

Test: Manual
Bug: 184050442
Change-Id: Id293e49f02f7197829a5a4c848a34d21106de34e

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,6 +35,9 @@
     <!-- Permissions required for statsd pull metrics -->
     <uses-permission android:name="android.permission.REGISTER_STATS_PULL_ATOM"/>
 
+    <!-- Permissions required to check if an app is in the foreground or not during IO -->
+    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" />
+
     <application
             android:name="com.android.providers.media.MediaApplication"
             android:label="@string/app_label"
