Add intent-filter for ACTION_PICK_IMAGES
Adding PhotoPickerActivity to handle ACTION_PICK_IMAGES. This will just
help us to get started. Theme and Style needs changes, these changes can
be done when we design GridView.

Bug: 168001592
Test: N.A.
Change-Id: I4cc2bfb0be0cc707b51c0d857e687c7469e1af75

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -138,5 +138,17 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <activity
+                android:name="com.android.providers.media.photopicker.PhotoPickerActivity"
+                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:exported="true"
+                android:excludeFromRecents="true"
+                android:priority="100" >
+            <intent-filter>
+                <action android:name="android.provider.action.PICK_IMAGES" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
