Introduce ViewModel for PhotoPicker
Use MVVM architecture for PhotoPicker. Added a new class GridViewModel.

Bug: 168001592
Test: Manual, Verified that PhotoPickerApp is able to select images from
list of images

Change-Id: I202a3a5f8a462d55c5e72828c2ae70929a8064d2

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,6 +40,7 @@
 
     <application
             android:name="com.android.providers.media.MediaApplication"
+            android:theme="@style/AppTheme"
             android:label="@string/app_label"
             android:allowBackup="false"
             android:supportsRtl="true"
@@ -141,7 +142,7 @@
 
         <activity
                 android:name="com.android.providers.media.photopicker.PhotoPickerActivity"
-                android:configChanges="orientation|keyboardHidden|screenSize"
+                android:theme="@style/AppTheme"
                 android:exported="true"
                 android:excludeFromRecents="true"
                 android:priority="100" >
