Support simple single select in PhotoActivity
- Add PhotosTabFragment with RecyclerView
- Add ViewHolders for RecyclerView
- Get the data from PickerViewModel
- Return the uri after the user clicks the Photo
- Grant uri read permission

Test: manual. the videos on b/169738588
Test: atest ItemTest
Bug: 169738588
Change-Id: Ie857fa4f25c82ceaca6ca2c160c109e1d15eedf2

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,7 +40,6 @@
 
     <application
             android:name="com.android.providers.media.MediaApplication"
-            android:theme="@style/AppTheme"
             android:label="@string/app_label"
             android:allowBackup="false"
             android:supportsRtl="true"
@@ -142,7 +141,7 @@
 
         <activity
                 android:name="com.android.providers.media.photopicker.PhotoPickerActivity"
-                android:theme="@style/AppTheme"
+                android:theme="@style/PickerDefaultTheme"
                 android:exported="true"
                 android:excludeFromRecents="true"
                 android:priority="100" >
