Change MTS CTS tests to desired config
Adds min SDK to manifests and ensure S tests are not run on R.
This still fails when running on R, since we have tests that need to target current sdk.

Will follow-up with R fix.

Bug: 182960918
Test: atest MediaProviderTest
Change-Id: I6348b38d25f33dd57565d347d5c4e1cf04f72ae7

--- a/tests/AndroidManifest.xml
+++ b/tests/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.providers.media.tests">
 
+    <uses-sdk android:minSdkVersion="30" android:targetSdkVersion="30" />
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.UPDATE_APP_OPS_STATS" />
