Support MIME type filters for ACTION_PICK_IMAGES
Client apps can filter by image/* or video/* mime types. To trigger
default PhotoPicker view with images and videos, no type needs to be
set.

Bug: 169737761
Bug: 185228105
Test: manual (see video on the bug)

Change-Id: Iad442622a46549f0d2865abd8f118acd0f4019f9

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -145,6 +145,12 @@
             <intent-filter>
                 <action android:name="android.provider.action.PICK_IMAGES" />
                 <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="image/*" />
+                <data android:mimeType="video/*" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.provider.action.PICK_IMAGES" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
