--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -65,6 +65,11 @@
             </intent-filter>
         </provider>
 
+        <provider
+            android:name="com.android.providers.media.photopicker.PhotoPickerProvider"
+            android:authorities="com.android.providers.media.photopicker"
+            android:exported="false" />
+
         <!-- Handles database upgrades after OTAs, then disables itself -->
         <receiver android:name="com.android.providers.media.MediaUpgradeReceiver"
             android:exported="true">
