Define MANAGE_CLOUD_MEDIA_PROVIDERS permission in MediaProvider
This permission will be used to protect CloudMediaProviders. Because
the permission is defined in the MediaProvider mainline module as
signature only, the MediaProvider will have exclusive access to the
permission and it will be available on R and S devices where the
module is backported to.

We also grant MediaProvider itself the permission

Bug: 195008823
CTS-Coverage-Bug: 193668830
Test: adb shell dumpsys package
com.google.android.providers.media.module | grep
manage_cloud_media_providers

Change-Id: Icd1657d0f91366a28f5cced52329d9b9289c3877

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,6 +38,12 @@
     <!-- Permissions required to check if an app is in the foreground or not during IO -->
     <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS" />
 
+    <!-- Permission required to access CloudMediaProviders. Declared by us -->
+    <uses-permission android:name="com.android.providers.media.permission.MANAGE_CLOUD_MEDIA_PROVIDERS" />
+
+    <permission android:name="com.android.providers.media.permission.MANAGE_CLOUD_MEDIA_PROVIDERS"
+                android:protectionLevel="signature" />
+
     <application
             android:name="com.android.providers.media.MediaApplication"
             android:label="@string/app_label"
